Bug 52842 - [Symbian] Fix StackBounds::initialize()
Summary: [Symbian] Fix StackBounds::initialize()
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Web Template Framework (show other bugs)
Version: 528+ (Nightly build)
Hardware: S60 Hardware S60 3rd edition
: P2 Normal
Assignee: Siddharth Mathur
URL:
Keywords: Qt
Depends on:
Blocks: 50251
  Show dependency treegraph
 
Reported: 2011-01-20 13:57 PST by Siddharth Mathur
Modified: 2011-01-20 15:49 PST (History)
3 users (show)

See Also:


Attachments
Use TThreadStackInfo.iLimit for lowest possible address of stack (1.83 KB, patch)
2011-01-20 14:06 PST, Siddharth Mathur
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Siddharth Mathur 2011-01-20 13:57:07 PST
On Symbian, 
 m_origin = (void*)info.iBase; // gives stack start
 m_bound =  (void*)info.iLimit; // gives stack limit


The max stack size on Symbian threads is 80kB, and hence iBase-iLimit is that size.
Comment 1 Siddharth Mathur 2011-01-20 14:06:08 PST
Created attachment 79648 [details]
Use TThreadStackInfo.iLimit for lowest possible address of stack
Comment 2 Geoffrey Garen 2011-01-20 14:08:37 PST
Comment on attachment 79648 [details]
Use TThreadStackInfo.iLimit for lowest possible address of stack

r=me
Comment 3 WebKit Commit Bot 2011-01-20 15:49:29 PST
Comment on attachment 79648 [details]
Use TThreadStackInfo.iLimit for lowest possible address of stack

Clearing flags on attachment: 79648

Committed r76297: <http://trac.webkit.org/changeset/76297>
Comment 4 WebKit Commit Bot 2011-01-20 15:49:35 PST
All reviewed patches have been landed.  Closing bug.