2011-01-20  Siddharth Mathur  <siddharth.mathur@nokia.com>

Reviewed by Geoffrey Garen.

        [Symbian] Fix StackBounds::initialize()
        https://bugs.webkit.org/show_bug.cgi?id=52842

        * wtf/StackBounds.cpp:
        (WTF::StackBounds::initialize): Use TThreadStackInfo.iLimit for stack limit

Canonical link: https://commits.webkit.org/66535@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76297 268f45cc-cd09-0410-ab3c-d52691b4dbfc